// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "srcSet": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "toString": [Function],
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/img/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/img/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,foobar/img/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg 750w,foobar/img/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/0e1d4cd5f6d282f2b72c682e56f7002a-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/52f7d960dfb880f2ad06e6a72d14c1d3-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/654f812ac2833fdf5dae880cceefa8c6-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/0e1d4cd5f6d282f2b72c682e56f7002a-500x450.jpg",
  "srcSet": "foobar/test/0e1d4cd5f6d282f2b72c682e56f7002a-500x450.jpg 500w,foobar/test/52f7d960dfb880f2ad06e6a72d14c1d3-750x675.jpg 750w,foobar/test/654f812ac2833fdf5dae880cceefa8c6-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
  "srcSet": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/8cf5144d1a53539a63ab0c857480e0d4-200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
  "srcSet": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg 100w,foobar/8cf5144d1a53539a63ab0c857480e0d4-200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/664746997a52e6e2d19e8ec18f3cb1e3-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cb22e95242175e627b7160dcafc23f71-513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/664746997a52e6e2d19e8ec18f3cb1e3-500.png",
  "srcSet": "foobar/664746997a52e6e2d19e8ec18f3cb1e3-500.png 500w,foobar/cb22e95242175e627b7160dcafc23f71-513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/9affb0e18b367d321029cb1d539517fd-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg",
  "srcSet": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg 500w,foobar/9affb0e18b367d321029cb1d539517fd-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/9affb0e18b367d321029cb1d539517fd-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg",
  "srcSet": "foobar/8f3205961f8059ed1a5f6ab169a6037c-500.jpg 500w,foobar/9affb0e18b367d321029cb1d539517fd-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "public/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "public/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,public/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg 750w,public/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/a9bb9ae4b53063c3fe3276866ccf95ea-600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/b7c2874f8b37be3ff1f29f211ad478eb-700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/4d88294cf2a6ec2dc7481dea13d95bd5-800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/a9bb9ae4b53063c3fe3276866ccf95ea-600.jpg",
  "srcSet": "foobar/a9bb9ae4b53063c3fe3276866ccf95ea-600.jpg 600w,foobar/b7c2874f8b37be3ff1f29f211ad478eb-700.jpg 700w,foobar/4d88294cf2a6ec2dc7481dea13d95bd5-800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/c40223dc5a41265ea2a203cc37e8a28c-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/5b37861aa24d9355ed43047d739bbc98-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/abd18ed265be7dede2a8e9f71e2738ca-300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg",
  "srcSet": "foobar/5f4f9a15b85bf6eaba444a880ab97b87-100.jpg 100w,foobar/c40223dc5a41265ea2a203cc37e8a28c-167.jpg 167w,foobar/5b37861aa24d9355ed43047d739bbc98-234.jpg 234w,foobar/abd18ed265be7dede2a8e9f71e2738ca-300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/5d85ed69da0bf864735cb5f3cc08ef50-667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/2386936912b74b421b9e54283fb6b66b-834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,foobar/5d85ed69da0bf864735cb5f3cc08ef50-667.jpg 667w,foobar/2386936912b74b421b9e54283fb6b66b-834.jpg 834w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx4BBQUFBwYHDggIDh4UERQeHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHv/AABEIACQAKAMBEQACEQEDEQH/xAGiAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgsQAAIBAwMCBAMFBQQEAAABfQECAwAEEQUSITFBBhNRYQcicRQygZGhCCNCscEVUtHwJDNicoIJChYXGBkaJSYnKCkqNDU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6g4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2drh4uPk5ebn6Onq8fLz9PX29/j5+gEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/AOf1z9neV5UTQLixtIWZRJJLJKWRc84BzuOOcZHPGe9bOkuhmpStZmbefs1a6moW/wBj8R6fPaFsTtLC8Mipxnao3BjjPBYdueeF7JjUi/rX7MkU0Rl0/wASeTPliQbQmNvbG/I578/Sn7JBzM5G5/Z8+IGjfYb+w+w6pcLN++t7aYIUX1DSbQwIyD0Iz0PUZzotxaNaVXkmpdj0Dwb8JNavbyObxNEunWSMd9tHMrSynAwMrlVU9znPGMDOa5KWBle8z1cRmkeW1LfufQQCIpZtiqoyWPGBXqHhnmnin43+AdC1H7Et3catKpbzG06MSImACAXJVWznjaW6HOKh1EhpNkPhH45eC/EOsQ6aYtQ02S4bZDJdRp5TNuAVdyscE5HUYzkZ7kVSLE4yPUiq7s4yenSrAj2DkZ79OlAHjmo+D/jPrGmS2WteO7eKBgTL9kVYi3B+XdHErbfXnnuKxaqPQq8ep8xz2YEpiUq64Kq4wcgHnGP59OetYJ3Rrsdd8O/h9rXiW6um03Fu1hJCwa4AA+bLgn+98oXjH8XYdW43TEpWaPWPhv8ADfWdN+JttrVzBGbIkzXZk2jy3BYoFwxLEkRsSBgZIySDlwg21ccpWWnU9+yjnIOMHvXWYGdqGnW+oadc2V6ZJILuJoZo/MK7lYFSMg8ZBPI5qQPM/FvwbtL3xBp+raFpuk2ItmVZ7YwCOGWMHPRBgt2OQcg4PA5zlT6opS7nR6vY6nbzyXAtrdZ73ZDJcxRNuLjITcV5PXbkgYz7YpTTtcUR/wAK4vEM+k3a6+C0kd46xXHl7RKnH8OTjB4zk85HGCA6aeqY5W6Hb+UychuO1akj1GX9MHtTARyQTg4HpUsBImLsd2DQgJV4TaOhqkAvVck9eDQB/9k=",
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,foobar/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg 750w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg",
  "srcSet": "foobar/0e1d4cd5f6d282f2b72c682e56f7002a-500.jpg 500w,foobar/52f7d960dfb880f2ad06e6a72d14c1d3-750.jpg 750w,foobar/654f812ac2833fdf5dae880cceefa8c6-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
